chore(dev): pathogen profile refactor stage one

--- a/nextflow.config
+++ b/nextflow.config
@@ -80,6 +80,101 @@ params {
 
   }
 
+
+  pathogenDetection {
+
+    taxonomicProfile {
+
+      alignment                       = true
+      alignmentMethod                 = "bowtie2"
+      alignmentIndex                  = "$params.databaseDirectory/lod"
+      alignmentReference              = "$params.databaseDirectory/lod.fasta"
+      alignmentRemapThreads           = 2
+      alignmentRemapParallel          = 4
+
+      classifier                      = false
+      classifierMethod                = "kraken2 metabuli"
+      classifierMetabuliIndex         = "$params.databaseDirectory/virus.metabuli"
+      classifierKrakenIndex           = "$params.databaseDirectory/virus.kraken2"
+      classifierKrakenConfidence      = 0.1
+
+      relativeAbundanceCorrection     = false
+      relativeAbundanceGenomeLength   = "$params.databaseDirectory/genome_lengths.tsv.xz"
+
+      profiler                        = false
+      profilerMethod                  = "bracken sylph kmcp"
+      profilerBrackenReadLength       = 150
+      profilerBrackenRank             = "S"
+      profilerBrackenMinReads         = 3
+      profilerSylphIndex              = "$params.databaseDirectory/virus.syldb"
+      profilerSylphMetadata           = "$params.databaseDirectory/virus.sylph.metadata.tsv.gz"
+      profilerKmcpIndex               = "$params.databaseDirectory/virus.kmcp"
+      profilerKmcpMode                = 0  // pathogen detection
+      
+    }
+
+    metagenomeAssembly {              // low abundance configuration for csf
+
+      assemblyMethod                  = "metaspades megahit"
+      assemblyArgs                    = ""
+      assemblyKmerList                = "21,29,39,59,79,99,119,127"
+      assemblyMinContigLength         = 200
+
+      binningMethod                   = "concoct metabat2"     
+      binningChunkSize                = 10000   // concoct
+      binningReadLength               = 150     // concoct
+      binningMinContigLength          = 1500    // concoct / metabat2
+      binningMinBinSize               = 5000    // concoct / metabat2
+
+      ncbiDatabase                    = false
+      ncbiDatabaseIndex               = "$params.databaseDirectory/nt_nr"
+      ncbiDatabaseMethod              = "blast diamond"
+
+      contigProfile                   = false
+      contigProfileMethod             = "blast"
+      contigProfileIndex              = "$params.databaseDirectory/virus.db"
+
+      virusDetection                  = false
+      virusDetectionMethod            = "genomad"
+      virusDetectionMinContigLength   = 2000
+      virusDetectionIndex             = "$params.databaseDirectory/genomad_db"
+
+      virusContigPolish               = false
+      virusContigPolishMethod         = "cobra"
+
+      virusProfile                    = false
+      virusProfileMethod              = "minimap2"
+      virusProfileIndex               = "$params.databaseDirectory/img_vr.fasta.xz"
+      virusProfileReference           = "$params.databaseDirectory/img_vr.fasta.xz"
+
+      rdrpDetection                   = false
+      rdrpDetectionMethod             = "rdrp-scan"
+      rdrpLibraryTag                  = "RNA"
+      rdrpDetectionIndex              = "$params.databaseDirectory/rdrp_db"
+
+      remapThreads                    = 2
+      remapParallel                   = 4
+
+    }
+
+    hostGenome {
+
+      aneuploidyDetection            = true
+      aneuploidyReferenceMethod      = "cnvkit"
+      aneuploidyLibraryTag           = "DNA HOST"
+
+      aneuploidyAligner              = "minimap2"
+      aneuploidyIndex                = "$params.databaseDirectory/chm13v2.mmi"
+      aneuploidyReferenceAlignment   = "$params.databaseDirectory/aneuploidy.bam"
+
+      signatureBacterialViral        = true
+      signatureLibraryTag            = "RNA HOST"
+      signatureReferences            = "two_gene_signature.fasta"
+      
+    }
+
+  }
+
   panviralEnrichment {            
 
     virusAligner                      = "minimap2"
@@ -117,102 +212,6 @@ params {
     assemblyMgeScanWindow             = 2000
     assemblyMgeMethod                 = "genomad"
     assemblyGenomadDatabase           = "$params.databaseDirectory/genomad_db"
-
-  }
-
-  pathogenDetection {
-
-    taxonomicProfile {
-
-      alignmentMethod                 = "bowtie2"
-      alignmentIndex                  = "$params.databaseDirectory/virus"
-      alignmentReference              = "$params.databaseDirectory/virus.fasta.xz"
-      alignmentRemapThreads           = 2
-      alignmentRemapParallel          = 4
-
-      alignmentSubset                 = false
-      alignmentSubsetIndex            = "$params.databaseDirectory/virus.mash"
-      alignmentSubsetMinHashes        = 1
-
-      classifierMethod                = "kraken2 metabuli"
-      classifierMetabuliIndex         = "$params.databaseDirectory/virus.metabuli"
-      classifierKrakenIndex           = "$params.databaseDirectory/virus.kraken2"
-      classifierKrakenConfidence      = 0.1
-
-      relativeAbundanceCorrection     = true
-      relativeAbundanceGenomeLength   = "$params.databaseDirectory/genome_lengths.tsv.xz"
-
-      profilerMethod                  = "bracken sylph kmcp"
-      profilerBrackenReadLength       = 150
-      profilerBrackenRank             = "S"
-      profilerBrackenMinReads         = 3
-      profilerSylphIndex              = "$params.databaseDirectory/virus.syldb"
-      profilerSylphMetadata           = "$params.databaseDirectory/virus.sylph.metadata.tsv.gz"
-      profilerKmcpIndex               = "$params.databaseDirectory/virus.kmcp"
-      profilerKmcpMode                = 0  // pathogen detection
-      
-    }
-
-    metagenomeAssembly {              // low abundance configuration for csf
-
-      assemblyMethod                  = "metaspades megahit"
-      assemblyArgs                    = ""
-      assemblyKmerList                = "21,29,39,59,79,99,119,127"
-      assemblyMinContigLength         = 200
-
-      binningMethod                   = "concoct metabat2"     
-      binningChunkSize                = 10000   // concoct
-      binningReadLength               = 150     // concoct
-      binningMinContigLength          = 1500    // concoct / metabat2
-      binningMinBinSize               = 5000    // concoct / metabat2
-
-      ncbiDatabase                    = true
-      ncbiDatabaseIndex               = "$params.databaseDirectory/nt_nr"
-      ncbiDatabaseMethod              = "blast diamond"
-
-      contigProfile                   = false
-      contigProfileMethod             = "sylph"
-      contigProfileIndex              = "$params.databaseDirectory/virus.syldb"
-      contigProfileMetadata           = "$params.databaseDirectory/virus.sylph.metadata.tsv.gz"
-
-      virusDetection                  = true
-      virusDetectionMethod            = "genomad"
-      virusDetectionMinContigLength   = 2000
-      virusDetectionIndex             = "$params.databaseDirectory/genomad_db"
-
-      virusContigPolish               = true
-      virusContigPolishMethod         = "cobra"
-
-      virusProfile                    = true
-      virusProfileMethod              = "minimap2"
-      virusProfileIndex               = "$params.databaseDirectory/img_vr.fasta.xz"
-      virusProfileReference           = "$params.databaseDirectory/img_vr.fasta.xz"
-
-      rdrpDetection                   = true
-      rdrpDetectionMethod             = "rdrp-scan"
-      rdrpLibraryTag                  = "RNA"
-      rdrpDetectionIndex              = "$params.databaseDirectory/rdrp_db"
-
-      remapThreads                    = 2
-      remapParallel                   = 4
-
-    }
-
-    hostGenome {
-
-      aneuploidyDetection            = true
-      aneuploidyReferenceMethod      = "cnvkit"
-      aneuploidyLibraryTag           = "DNA HOST"
-
-      aneuploidyAligner              = "minimap2"
-      aneuploidyIndex                = "$params.databaseDirectory/chm13v2.mmi"
-      aneuploidyReferenceAlignment   = "$params.databaseDirectory/aneuploidy.bam"
-
-      signatureBacterialViral        = true
-      signatureLibraryTag            = "RNA HOST"
-      signatureReferences            = "two_gene_signature.fasta"
-      
-    }
 
   }
 
@@ -311,10 +310,6 @@ profiles {
       params.qualityControl.backgroundDepletionReference   = "$params.databaseDirectory/qc"
   }
 
-  conda {
-
-  }
-
   micro {
       executor.$local.cpus = 8
       executor.$local.memory = '42 GB'
@@ -338,6 +333,27 @@ profiles {
   large {
       executor.$local.cpus = 256
       executor.$local.memory = '1960 GB'
+  }
+
+  dgx {
+    params.resources.threads.fastp                 = 16
+    params.resources.threads.scrubby               = 16
+    params.resources.threads.vircov                = 16
+    params.resources.threads.cerebro               = 2
+    params.resources.threads.kraken2               = 32
+    params.resources.threads.bracken               = 1
+    params.resources.threads.minimap2              = 16
+    params.resources.threads.metabat2              = 16
+    params.resources.threads.metabuli              = 32
+    params.resources.threads.sylph                 = 32
+    params.resources.threads.kmcp                  = 32
+    params.resources.threads.metaspades            = 32
+    params.resources.threads.megahit               = 32
+    params.resources.threads.concoct               = 8
+    params.resources.memory.metaspades             = "128 GB"
+    params.resources.memory.megahit                = "128 GB"
+    params.resources.memory.metabuli               = "128 GB"
+    params.resources.memory.kmcp                   = "128 GB"
   }
 
 }
@@ -379,6 +395,10 @@ process {
     withLabel: qualityBackgroundDepletion { 
       cpus = params.resources.threads.vircov 
       conda = params.resources.conda.virscrub
+    }
+    withLabel: pathogenProfileVircov {
+      cpus = params.resources.threads.vircov 
+      conda = params.resources.conda.vircov
     }
     withLabel: pathogenProfileKraken2 { 
       cpus = params.resources.threads.kraken2 
