chore(dev): pathogen profile refactor

--- a/nextflow.config
+++ b/nextflow.config
@@ -85,6 +85,8 @@ params {
 
     taxonomicProfile {
 
+      enabled                         = true
+
       alignment                       = true
       alignmentMethod                 = "bowtie2"
       alignmentIndex                  = "$params.databaseDirectory/lod"
@@ -114,6 +116,8 @@ params {
     }
 
     metagenomeAssembly {              // low abundance configuration for csf
+
+      enabled                         = false
 
       assemblyMethod                  = "metaspades megahit"
       assemblyArgs                    = ""
@@ -236,6 +240,8 @@ params {
       fastp                 = 8
       scrubby               = 8
       vircov                = 8
+      vircovRemap           = 2
+      vircovParallel        = 4
       cerebro               = 2
       kraken2               = 8
       bracken               = 1
@@ -298,6 +304,15 @@ profiles {
     params.qualityControl.adapterReverse      = "AGATCGGAAGAGCGTCGTGTAGGGAAAGAGTGT"
   }
 
+  ont {
+
+    params.qualityControl.readDeduplication   = false  
+    params.qualityControl.internalControls    = false 
+    params.qualityControl.syntheticControls   = false 
+    params.qualityControl.backgroundDepletion = false 
+
+
+  }
 
   bg {
       params.cerebroConfig.processQcBackgroundOnly         = true
@@ -312,7 +327,7 @@ profiles {
 
   micro {
       executor.$local.cpus = 8
-      executor.$local.memory = '42 GB'
+      executor.$local.memory = '32 GB'
   }
   tiny {
       executor.$local.cpus = 16
@@ -338,7 +353,9 @@ profiles {
   dgx {
     params.resources.threads.fastp                 = 16
     params.resources.threads.scrubby               = 16
-    params.resources.threads.vircov                = 16
+    params.resources.threads.vircov                = 32
+    params.resources.threads.vircovRemap           = 8
+    params.resources.threads.vircovParallel        = 4
     params.resources.threads.cerebro               = 2
     params.resources.threads.kraken2               = 32
     params.resources.threads.bracken               = 1
