chore(dev): add lod script; add secondary alignment profile

--- a/nextflow.config
+++ b/nextflow.config
@@ -91,6 +91,7 @@ params {
       alignmentMethod                 = "bowtie2"
       alignmentIndex                  = "$params.databaseDirectory/lod"
       alignmentReference              = "$params.databaseDirectory/lod.fasta"
+      alignmentSecondary              = false
       alignmentRemapThreads           = 2
       alignmentRemapParallel          = 4
 
