chore(dev): refactor ont qc

--- a/nextflow.config
+++ b/nextflow.config
@@ -24,7 +24,7 @@ params {
   outputDirectory                     = "$params.executionDirectory/output"   // output directory
   databaseDirectory                   = "db"                                  // db base directory
 
-
+  nanopore                            = false
   monochrome                          = false
 
   cerebroProduction {
@@ -51,14 +51,12 @@ params {
   qualityControl {    
       
       readQuality                     = true
-      readQualityMethod               = "fastp"  // fastp nanoq
-      
+      adapterForward                  = null
+      adapterReverse                  = null
+
       readDeduplication               = true
       readDeduplicationHead           = 75
       readDeduplicationDeterministic  = false
-    
-      adapterForward                  = null
-      adapterReverse                  = null
     
       syntheticControls               = true
       syntheticControlsAligner        = "minimap2" // bowtie2 minimap2 minigraph strobealign
@@ -240,6 +238,7 @@ params {
   resources {
     threads {
       fastp                 = 8
+      nanoq                 = 1
       scrubby               = 8
       vircov                = 8
       vircovRemap           = 2
@@ -268,6 +267,7 @@ params {
       cerebro               = "$baseDir/lib/resources/conda/cerebro.yml"
       concoct               = "$baseDir/lib/resources/conda/concoct.yml"
       fastp                 = "$baseDir/lib/resources/conda/fastp.yml"
+      nanoq                 = "$baseDir/lib/resources/conda/nanoq.yml"
       kmcp                  = "$baseDir/lib/resources/conda/kmcp.yml"
       kraken2               = "$baseDir/lib/resources/conda/kraken2.yml"
       megahit               = "$baseDir/lib/resources/conda/megahit.yml"
@@ -308,10 +308,25 @@ profiles {
 
   ont {
 
-    params.qualityControl.readDeduplication   = false  
-    params.qualityControl.internalControls    = false 
-    params.qualityControl.syntheticControls   = false 
-    params.qualityControl.backgroundDepletion = false 
+    params.nanopore                                       = true
+
+    params.qualityControl.readQuality                     = true
+
+    params.qualityControl.readDeduplication               = false
+
+    params.qualityControl.hostDepletion                   = true
+    params.qualityControl.hostDepletionAligner            = "minimap2"
+    params.qualityControl.hostDepletionIndex              = "$params.databaseDirectory/chm13v2.fasta"
+
+    params.qualityControl.internalControls                = false
+    params.qualityControl.internalControlsAligner         = "minimap2"
+    params.qualityControl.internalControlsIndex           = "$params.databaseDirectory/controls.fasta"
+    params.qualityControl.internalControlsReference       = "$params.databaseDirectory/controls.fasta"
+      
+    params.qualityControl.backgroundDepletion             = false
+    params.qualityControl.backgroundDepletionAligner      = "minimap2"
+    params.qualityControl.backgroundDepletionIndex        = "$params.databaseDirectory/background.fasta"
+    params.qualityControl.backgroundDepletionReference    = "$params.databaseDirectory/background.fasta"
 
 
   }
@@ -395,9 +410,13 @@ process {
       cpus = params.resources.threads.cerebro 
       conda = params.resources.conda.cerebro
     }
-    withLabel: qualityReadQuality { 
+    withLabel: qualityReadQualityFastp { 
       cpus = params.resources.threads.fastp 
       conda = params.resources.conda.fastp
+    }
+    withLabel: qualityReadQualityNanoq { 
+      cpus = params.resources.threads.nanoq 
+      conda = params.resources.conda.nanoq
     }
     withLabel: qualityHostDepletion { 
       cpus = params.resources.threads.scrubby 
