--- a/nextflow.config
+++ b/nextflow.config
@@ -91,8 +91,6 @@ params {
       alignmentIndex                  = "$params.databaseDirectory/lod"
       alignmentReference              = "$params.databaseDirectory/lod.fasta"
       alignmentSecondary              = false
-      alignmentRemapThreads           = 2
-      alignmentRemapParallel          = 4
 
       classifier                      = false
       classifierMethod                = "kraken2 metabuli"
@@ -155,9 +153,6 @@ params {
       rdrpDetectionMethod             = "rdrp-scan"
       rdrpLibraryTag                  = "RNA"
       rdrpDetectionIndex              = "$params.databaseDirectory/rdrp_db"
-
-      remapThreads                    = 2
-      remapParallel                   = 4
 
     }
 
@@ -311,23 +306,38 @@ profiles {
     params.nanopore                                       = true
 
     params.qualityControl.readQuality                     = true
-
     params.qualityControl.readDeduplication               = false
-
     params.qualityControl.hostDepletion                   = true
     params.qualityControl.hostDepletionAligner            = "minimap2"
     params.qualityControl.hostDepletionIndex              = "$params.databaseDirectory/chm13v2.fasta"
-
     params.qualityControl.internalControls                = false
     params.qualityControl.internalControlsAligner         = "minimap2"
     params.qualityControl.internalControlsIndex           = "$params.databaseDirectory/controls.fasta"
     params.qualityControl.internalControlsReference       = "$params.databaseDirectory/controls.fasta"
-      
     params.qualityControl.backgroundDepletion             = false
     params.qualityControl.backgroundDepletionAligner      = "minimap2"
     params.qualityControl.backgroundDepletionIndex        = "$params.databaseDirectory/background.fasta"
     params.qualityControl.backgroundDepletionReference    = "$params.databaseDirectory/background.fasta"
 
+    params.pathogenDetection.taxonomicProfile.alignment                       = false
+    params.pathogenDetection.taxonomicProfile.alignmentMethod                 = "minimap2"
+    params.pathogenDetection.taxonomicProfile.alignmentIndex                  = "$params.databaseDirectory/gtdb/gtdb.fasta"
+    params.pathogenDetection.taxonomicProfile.alignmentReference              = "$params.databaseDirectory/gtdb/gtdb.fasta"
+    params.pathogenDetection.taxonomicProfile.alignmentSecondary              = false
+
+    params.pathogenDetection.taxonomicProfile.classifier                      = true
+    params.pathogenDetection.taxonomicProfile.classifierMethod                = "kraken2 metabuli"
+    params.pathogenDetection.taxonomicProfile.classifierMetabuliIndex         = "$params.databaseDirectory/gtdb/metabuli"
+    params.pathogenDetection.taxonomicProfile.classifierKrakenIndex           = "$params.databaseDirectory/refseq/pluspf"
+    params.pathogenDetection.taxonomicProfile.classifierKrakenConfidence      = 0.1
+
+    params.pathogenDetection.taxonomicProfile.profiler                        = true
+    params.pathogenDetection.taxonomicProfile.profilerMethod                  = "bracken sylph"
+    params.pathogenDetection.taxonomicProfile.profilerBrackenReadLength       = 150
+    params.pathogenDetection.taxonomicProfile.profilerBrackenRank             = "S"
+    params.pathogenDetection.taxonomicProfile.profilerBrackenMinReads         = 3
+    params.pathogenDetection.taxonomicProfile.profilerSylphIndex              = "$params.databaseDirectory/gtdb/sylph"
+    params.pathogenDetection.taxonomicProfile.profilerSylphMetadata           = "$params.databaseDirectory/gtdb/sylph.metadata.tsv.gz"
 
   }
 
@@ -371,7 +381,7 @@ profiles {
     params.resources.threads.fastp                 = 16
     params.resources.threads.scrubby               = 16
     params.resources.threads.vircov                = 32
-    params.resources.threads.vircovRemap           = 8
+    params.resources.threads.vircovRemap           = 16
     params.resources.threads.vircovParallel        = 4
     params.resources.threads.cerebro               = 2
     params.resources.threads.kraken2               = 32
