chore(dev): refactor ont profile

--- a/nextflow.config
+++ b/nextflow.config
@@ -307,13 +307,17 @@ profiles {
 
     params.qualityControl.readQuality                     = true
     params.qualityControl.readDeduplication               = false
+    params.qualityControl.syntheticControls               = false
+
     params.qualityControl.hostDepletion                   = true
     params.qualityControl.hostDepletionAligner            = "minimap2"
     params.qualityControl.hostDepletionIndex              = "$params.databaseDirectory/chm13v2.fasta"
+
     params.qualityControl.internalControls                = false
     params.qualityControl.internalControlsAligner         = "minimap2"
     params.qualityControl.internalControlsIndex           = "$params.databaseDirectory/controls.fasta"
     params.qualityControl.internalControlsReference       = "$params.databaseDirectory/controls.fasta"
+    
     params.qualityControl.backgroundDepletion             = false
     params.qualityControl.backgroundDepletionAligner      = "minimap2"
     params.qualityControl.backgroundDepletionIndex        = "$params.databaseDirectory/background.fasta"
