chore(dev): refactor ont profile

--- a/nextflow.config
+++ b/nextflow.config
@@ -340,7 +340,7 @@ profiles {
     params.pathogenDetection.taxonomicProfile.profilerBrackenReadLength       = 150
     params.pathogenDetection.taxonomicProfile.profilerBrackenRank             = "S"
     params.pathogenDetection.taxonomicProfile.profilerBrackenMinReads         = 3
-    params.pathogenDetection.taxonomicProfile.profilerSylphIndex              = "$params.databaseDirectory/gtdb/sylph"
+    params.pathogenDetection.taxonomicProfile.profilerSylphIndex              = "$params.databaseDirectory/gtdb/sylph.syldb"
     params.pathogenDetection.taxonomicProfile.profilerSylphMetadata           = "$params.databaseDirectory/gtdb/sylph.metadata.tsv.gz"
 
   }
