chore(dev): add meta assembly ont

--- a/nextflow.config
+++ b/nextflow.config
@@ -115,7 +115,7 @@ params {
 
     metagenomeAssembly {              // low abundance configuration for csf
 
-      enabled                         = false
+      enabled                         = true
 
       assemblyMethod                  = "metaspades megahit"
       assemblyArgs                    = ""
