chore(dev): update default config

--- a/nextflow.config
+++ b/nextflow.config
@@ -88,26 +88,24 @@ params {
 
       alignment                       = true
       alignmentMethod                 = "bowtie2"
-      alignmentIndex                  = "$params.databaseDirectory/lod"
-      alignmentReference              = "$params.databaseDirectory/lod.fasta"
+      alignmentIndex                  = "$params.databaseDirectory/lod/lod"
+      alignmentReference              = "$params.databaseDirectory/lod/lod.fasta"
       alignmentSecondary              = false
 
       classifier                      = false
       classifierMethod                = "kraken2 metabuli"
-      classifierMetabuliIndex         = "$params.databaseDirectory/virus.metabuli"
-      classifierKrakenIndex           = "$params.databaseDirectory/virus.kraken2"
+      classifierMetabuliIndex         = "$params.databaseDirectory/gtdb/metabuli"
+      classifierKrakenIndex           = "$params.databaseDirectory/refseq/kraken2"
       classifierKrakenConfidence      = 0.1
 
-      relativeAbundanceCorrection     = false
-      relativeAbundanceGenomeLength   = "$params.databaseDirectory/genome_lengths.tsv.xz"
-
-      profiler                        = false
-      profilerMethod                  = "bracken sylph kmcp"
+      profiler                        = true
+      profilerMethod                  = "bracken"
       profilerBrackenReadLength       = 150
       profilerBrackenRank             = "S"
       profilerBrackenMinReads         = 3
-      profilerSylphIndex              = "$params.databaseDirectory/virus.syldb"
-      profilerSylphMetadata           = "$params.databaseDirectory/virus.sylph.metadata.tsv.gz"
+
+      profilerSylphIndex              = "$params.databaseDirectory/gtdb/sylph.syldb"
+      profilerSylphMetadata           = "$params.databaseDirectory/gtdb/sylph.metadata.tsv.gz"
       profilerKmcpIndex               = "$params.databaseDirectory/virus.kmcp"
       profilerKmcpMode                = 0  // pathogen detection
       
