chore(dev): update default config

--- a/nextflow.config
+++ b/nextflow.config
@@ -92,7 +92,7 @@ params {
       alignmentReference              = "$params.databaseDirectory/lod/lod.fasta"
       alignmentSecondary              = false
 
-      classifier                      = false
+      classifier                      = true
       classifierMethod                = "kraken2 metabuli"
       classifierMetabuliIndex         = "$params.databaseDirectory/gtdb/metabuli"
       classifierKrakenIndex           = "$params.databaseDirectory/refseq/kraken2"
