chore(dev): update default config

--- a/nextflow.config
+++ b/nextflow.config
@@ -86,7 +86,7 @@ params {
 
       enabled                         = true
 
-      alignment                       = true
+      alignment                       = false
       alignmentMethod                 = "bowtie2"
       alignmentIndex                  = "$params.databaseDirectory/lod/lod"
       alignmentReference              = "$params.databaseDirectory/lod/lod.fasta"
