chore(dev): set min allowed contig length for binning

--- a/nextflow.config
+++ b/nextflow.config
@@ -123,6 +123,7 @@ params {
       binningMethod                   = "concoct metabat2"     
       binningChunkSize                = 10000   // concoct
       binningReadLength               = 150     // concoct
+      binningMinContigLength          = 1500    // concoct / metabat2 >= 1500
       binningMinBinSize               = 5000    // concoct / metabat2
 
       ncbiDatabase                    = false
