chore(dev): deactivate metabat2

--- a/nextflow.config
+++ b/nextflow.config
@@ -115,12 +115,12 @@ params {
 
       enabled                         = true
 
-      assemblyMethod                  = "metaspades megahit"
+      assemblyMethod                  = "megahit"
       assemblyArgs                    = ""
       assemblyKmerList                = "21,29,39,59,79,99,119,127"
       assemblyMinContigLength         = 200
 
-      binningMethod                   = "concoct metabat2"     
+      binningMethod                   = "concoct"     
       binningChunkSize                = 10000   // concoct
       binningReadLength               = 150     // concoct
       binningMinContigLength          = 1500    // concoct / metabat2 >= 1500
