chore(dev): add ganon

--- a/nextflow.config
+++ b/nextflow.config
@@ -88,27 +88,31 @@ params {
 
       alignment                       = false
       alignmentMethod                 = "bowtie2"
-      alignmentIndex                  = "$params.databaseDirectory/lod/lod"
-      alignmentReference              = "$params.databaseDirectory/lod/lod.fasta"
+      alignmentIndex                  = "$params.databaseDirectory/cipher/cipher"
+      alignmentReference              = "$params.databaseDirectory/cipher/cipher.fasta.gz"
       alignmentSecondary              = false
 
       classifier                      = true
-      classifierMethod                = "kraken2 metabuli"
-      classifierMetabuliIndex         = "$params.databaseDirectory/gtdb/metabuli"
-      classifierKrakenIndex           = "$params.databaseDirectory/refseq/kraken2"
-      classifierKrakenConfidence      = 0.1
-
+      classifierMethod                = "kraken2 metabuli ganon"
       profiler                        = true
-      profilerMethod                  = "bracken"
-      profilerBrackenReadLength       = 150
-      profilerBrackenRank             = "S"
-      profilerBrackenMinReads         = 3
+      profilerMethod                  = "bracken ganon kmcp sylph"
 
-      profilerSylphIndex              = "$params.databaseDirectory/gtdb/sylph.syldb"
-      profilerSylphMetadata           = "$params.databaseDirectory/gtdb/sylph.metadata.tsv.gz"
-      profilerKmcpIndex               = "$params.databaseDirectory/virus.kmcp"
-      profilerKmcpMode                = 0  // pathogen detection
-      
+      metabuliIndex                   = "$params.databaseDirectory/cipher/metabuli"
+      krakenIndex                     = "$params.databaseDirectory/cipher/kraken2"
+      krakenConfidence                = 0.0
+      brackenReadLength               = 150
+      brackenRank                     = "S"
+      brackenMinReads                 = 3
+      ganonIndex                      = "$params.databaseDirectory/cipher/ganon"
+      ganonMultipleMatches            = "em"
+      kmcpIndex                       = "$params.databaseDirectory/cipher/kmcp"
+      kmcpMode                        = 0
+      kmcpLevel                       = "species"
+      sylphIndex                      = "$params.databaseDirectory/cipher/sylph/cipher.syldb"
+      sylphMetadata                   = "$params.databaseDirectory/cipher/sylph/cipher.metadata.tsv.gz"
+      sylphMinNumberKmers             = 20
+      sylphQueryCompression           = 100
+
     }
 
     metagenomeAssembly {              // low abundance configuration for csf
@@ -244,6 +248,7 @@ params {
       metabuli              = 8
       sylph                 = 8
       kmcp                  = 8
+      ganon                 = 8
       metaspades            = 8
       megahit               = 8 
       concoct               = 4
@@ -253,6 +258,7 @@ params {
       megahit               = "16 GB"
       metabuli              = "16 GB"
       kmcp                  = "16 GB"
+      ganon                 = "16 GB"
     }
 
     conda {
@@ -262,6 +268,7 @@ params {
       fastp                 = "$baseDir/lib/resources/conda/fastp.yml"
       nanoq                 = "$baseDir/lib/resources/conda/nanoq.yml"
       kmcp                  = "$baseDir/lib/resources/conda/kmcp.yml"
+      kmcp                  = "$baseDir/lib/resources/conda/ganon.yml"
       kraken2               = "$baseDir/lib/resources/conda/kraken2.yml"
       megahit               = "$baseDir/lib/resources/conda/megahit.yml"
       metabuli              = "$baseDir/lib/resources/conda/metabuli.yml"
@@ -329,17 +336,17 @@ profiles {
 
     params.pathogenDetection.taxonomicProfile.classifier                      = true
     params.pathogenDetection.taxonomicProfile.classifierMethod                = "kraken2 metabuli"
-    params.pathogenDetection.taxonomicProfile.classifierMetabuliIndex         = "$params.databaseDirectory/gtdb/metabuli"
-    params.pathogenDetection.taxonomicProfile.classifierKrakenIndex           = "$params.databaseDirectory/refseq/pluspf"
-    params.pathogenDetection.taxonomicProfile.classifierKrakenConfidence      = 0.1
+    params.pathogenDetection.taxonomicProfile.metabuliIndex         = "$params.databaseDirectory/gtdb/metabuli"
+    params.pathogenDetection.taxonomicProfile.krakenIndex           = "$params.databaseDirectory/refseq/pluspf"
+    params.pathogenDetection.taxonomicProfile.krakenConfidence      = 0.1
 
     params.pathogenDetection.taxonomicProfile.profiler                        = true
     params.pathogenDetection.taxonomicProfile.profilerMethod                  = "bracken sylph"
-    params.pathogenDetection.taxonomicProfile.profilerBrackenReadLength       = 150
-    params.pathogenDetection.taxonomicProfile.profilerBrackenRank             = "S"
-    params.pathogenDetection.taxonomicProfile.profilerBrackenMinReads         = 3
-    params.pathogenDetection.taxonomicProfile.profilerSylphIndex              = "$params.databaseDirectory/gtdb/sylph.syldb"
-    params.pathogenDetection.taxonomicProfile.profilerSylphMetadata           = "$params.databaseDirectory/gtdb/sylph.metadata.tsv.gz"
+    params.pathogenDetection.taxonomicProfile.brackenReadLength       = 150
+    params.pathogenDetection.taxonomicProfile.brackenRank             = "S"
+    params.pathogenDetection.taxonomicProfile.brackenMinReads         = 3
+    params.pathogenDetection.taxonomicProfile.sylphIndex              = "$params.databaseDirectory/gtdb/sylph.syldb"
+    params.pathogenDetection.taxonomicProfile.sylphMetadata           = "$params.databaseDirectory/gtdb/sylph.metadata.tsv.gz"
 
   }
 
@@ -393,6 +400,7 @@ profiles {
     params.resources.threads.metabuli              = 32
     params.resources.threads.sylph                 = 32
     params.resources.threads.kmcp                  = 32
+    params.resources.threads.ganon                 = 32
     params.resources.threads.metaspades            = 32
     params.resources.threads.megahit               = 32
     params.resources.threads.concoct               = 8
@@ -400,6 +408,7 @@ profiles {
     params.resources.memory.megahit                = "128 GB"
     params.resources.memory.metabuli               = "128 GB"
     params.resources.memory.kmcp                   = "128 GB"
+    params.resources.memory.ganon                  = "128 GB"
   }
 
 }
@@ -466,6 +475,11 @@ process {
       cpus = params.resources.threads.kmcp 
       memory = params.resources.memory.kmcp 
       conda = params.resources.conda.kmcp
+    }
+    withLabel: pathogenProfileGanon { 
+      cpus = params.resources.threads.ganon 
+      memory = params.resources.memory.ganon 
+      conda = params.resources.conda.ganon
     }
     withLabel: pathogenProfileMetabuli {  
       cpus = params.resources.threads.metabuli
