--- a/nextflow.config
+++ b/nextflow.config
@@ -93,7 +93,7 @@ params {
       alignmentSecondary              = false
 
       classifier                      = true
-      classifierMethod                = "kraken2 metabuli ganon"
+      classifierMethod                = "kraken2 metabuli ganon kmcp"
       profiler                        = true
       profilerMethod                  = "bracken ganon kmcp sylph"
 
@@ -109,7 +109,7 @@ params {
       kmcpMode                        = 0
       kmcpLevel                       = "species"
       sylphIndex                      = "$params.databaseDirectory/cipher/sylph/cipher.syldb"
-      sylphMetadata                   = "$params.databaseDirectory/cipher/sylph/cipher.metadata.tsv.gz"
+      sylphMetadata                   = "$params.databaseDirectory/cipher/sylph/metadata.tsv.gz"
       sylphMinNumberKmers             = 20
       sylphQueryCompression           = 100
 
@@ -257,6 +257,7 @@ params {
       metaspades            = "16 GB"
       megahit               = "16 GB"
       metabuli              = "16 GB"
+      kraken2               = "16 GB"
       kmcp                  = "16 GB"
       ganon                 = "16 GB"
     }
@@ -407,6 +408,7 @@ profiles {
     params.resources.memory.metaspades             = "128 GB"
     params.resources.memory.megahit                = "128 GB"
     params.resources.memory.metabuli               = "128 GB"
+    params.resources.memory.kraken2                = "512 GB"
     params.resources.memory.kmcp                   = "128 GB"
     params.resources.memory.ganon                  = "128 GB"
   }
