chore(dev): add ganon

--- a/nextflow.config
+++ b/nextflow.config
@@ -260,6 +260,8 @@ params {
       kraken2               = "16 GB"
       kmcp                  = "16 GB"
       ganon                 = "16 GB"
+      sylph                 = "16 GB"
+      bracken               = "16 GB"
     }
 
     conda {
@@ -408,9 +410,11 @@ profiles {
     params.resources.memory.metaspades             = "128 GB"
     params.resources.memory.megahit                = "128 GB"
     params.resources.memory.metabuli               = "128 GB"
-    params.resources.memory.kraken2                = "512 GB"
+    params.resources.memory.kraken2                = "1024 GB"
     params.resources.memory.kmcp                   = "128 GB"
     params.resources.memory.ganon                  = "128 GB"
+    params.resources.memory.sylph                  = "128 GB"
+    params.resources.memory.bracken                = "32 GB"
   }
 
 }
@@ -463,14 +467,17 @@ process {
     }
     withLabel: pathogenProfileKraken2 { 
       cpus = params.resources.threads.kraken2 
+      memory = params.resources.memory.kraken2
       conda = params.resources.conda.kraken2
     }
     withLabel: pathogenProfileBracken { 
       cpus = params.resources.threads.bracken 
+      memory = params.resources.memory.bracken
       conda = params.resources.conda.bracken
     }
     withLabel: pathogenProfileSylph { 
       cpus = params.resources.threads.sylph 
+      memory = params.resources.memory.sylph 
       conda = params.resources.conda.sylph
     }
     withLabel: pathogenProfileKmcp { 
