chore(dev): add ganon

--- a/nextflow.config
+++ b/nextflow.config
@@ -271,7 +271,7 @@ params {
       fastp                 = "$baseDir/lib/resources/conda/fastp.yml"
       nanoq                 = "$baseDir/lib/resources/conda/nanoq.yml"
       kmcp                  = "$baseDir/lib/resources/conda/kmcp.yml"
-      kmcp                  = "$baseDir/lib/resources/conda/ganon.yml"
+      ganon                 = "$baseDir/lib/resources/conda/ganon.yml"
       kraken2               = "$baseDir/lib/resources/conda/kraken2.yml"
       megahit               = "$baseDir/lib/resources/conda/megahit.yml"
       metabuli              = "$baseDir/lib/resources/conda/metabuli.yml"
