chore(dev): fix ganon sample id

--- a/nextflow.config
+++ b/nextflow.config
@@ -103,7 +103,7 @@ params {
       brackenReadLength               = 150
       brackenRank                     = "S"
       brackenMinReads                 = 3
-      ganonIndex                      = "$params.databaseDirectory/cipher/ganon"
+      ganonIndex                      = "$params.databaseDirectory/cipher/ganon/cipher"  // --db-prefix
       ganonMultipleMatches            = "em"
       kmcpIndex                       = "$params.databaseDirectory/cipher/kmcp"
       kmcpMode                        = 0
