chore(dev): fix ganon sample id

--- a/nextflow.config
+++ b/nextflow.config
@@ -494,7 +494,7 @@ process {
     withLabel: pathogenProfileMetabuli {  
       cpus = params.resources.threads.metabuli
       memory = params.resources.memory.metabuli 
-      conda = params.resources.conda.metabuli
+      // conda = params.resources.conda.metabuli  // metabuli requires fork local installation
     }
     withLabel: pathogenAssemblyMetaspades {  
       cpus = params.resources.threads.metaspades
